# HORUS-DIGITAL-ASSURANCES

./: .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  README.md  requirements.txt
backend/accounts/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/commissions/: models.py  serializers.py  services.py  urls.py  views.py
backend/common/: pagination.py
backend/config/: settings.py  urls.py
backend/contracts/: exports.py  models.py  serializers.py  services.py  urls.py  views.py
backend/organizations/: emails.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/payments/: models.py  serializers.py  services.py  urls.py  views.py
backend/referentials/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/scripts/: ass_sandbox_probe.py
backend/system/: urls.py  views.py
backend/tests/: conftest.py  test_accounts_api.py  test_api_endpoints.py  test_ass_client.py  test_ass_integration_api.py  test_ass_payload_mapping.py  test_ass_real_responses.py  test_commissions.py  test_contract_exports.py  test_contract_issuance.py  test_om_payments.py  test_organizations_api.py  test_permissions.py
docs/ass/: analyse_api_ass.md  ass_api_partner_sanitized.postman_collection.json  ass_test_environment.postman_environment.json  categories_sous_categories.md  roadmap_horus_ass.md  validation_sandbox_2026-06-11.md
web/: README.md  next.config.ts  package-lock.json  package.json  sentry.server.config.ts
(+79 files in other folders)
