[project]
name = "horusassurancesdigital"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django==6.0.6",
    "djangorestframework==3.17.1",
    "django-cors-headers==4.9.0",
    "python-decouple==3.8",
    "requests==2.34.2",
    "gunicorn==26.0.0",
    "whitenoise==6.12.0",
    "psycopg2-binary==2.9.12",
    "dj-database-url==3.1.2",
]

[dependency-groups]
dev = [
    "djangorestframework-stubs==3.17.0",
    "pytest==9.0.3",
    "pytest-django==4.12.0",
]
